# Software

./: .appveyor.yml  .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  PORTING_CPP_TO_PYTEST.txt  PULL_REQUEST_TEMPLATE.md  README.md  TODO.md  TODO.txt  \  bazel-remote-cache-key.json.enc  codecov.sh  game_state_update_patch.txt  my_prog.info  notes.md  nothing.txt  q  tests_done.sh  travis_ci.sh
src/: '  .bazelproject  .bazelrc  .gitignore  .pre-commit-config.yaml  .vimrc  1  BUILD  CTestTestfile.cmake  MODULE.bazel  WORKSPACE  as5047spi.h  center_of_mass  compile_commands.json  convert_profdata_to_lcov.sh  defs.bzl  dissassembled.txt  generate.sh  notes.md  plan.md  python_configure.bzl  scveloso  sensor_fusion_test.patch  simon.ioc  ssh_key  ssh_key.pub  tbots.py  thread_info.txt  train.sh
src/.clwb/: .bazelproject
src/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
src/cc_toolchain/: BUILD  cc_toolchain_config.bzl
src/cc_toolchain/crosstool-ng/: .config
src/cc_toolchain/wrapper/: arm-none-eabi-ar  arm-none-eabi-cpp  arm-none-eabi-g++  arm-none-eabi-gcc  arm-none-eabi-gcov  arm-none-eabi-ld  arm-none-eabi-nm  arm-none-eabi-objcopy  arm-none-eabi-objdump  arm-none-eabi-strip  clang-ar  clang-clang  clang-cov  clang-cpp  clang-dwp  clang-lld  clang-nm  clang-objcopy  clang-objdump  clang-strip  jetson-nano-g++  jetson-nano-ld  jetson-nano-objcopy  jetson_nano_ar  jetson_nano_cpp  jetson_nano_g++  jetson_nano_gcc  jetson_nano_gcov  jetson_nano_ld  jetson_nano_nm  jetson_nano_objcopy  jetson_nano_objdump  jetson_nano_strip  k8_gcc-ar  k8_gcc-cov  k8_gcc-dwp  k8_gcc-k8_gcc  k8_gcc-lld  k8_gcc-objcopy  k8_gcc-profdata  (+17 more)
src/cli/: cli_params.py  multi_option.py
src/corner-kick/: .prettierrc  CMakeLists.txt  README.md  module.d.ts  package.json  package.xml  tsconfig.json  tslint.json
src/corner-kick/config/: webpack.config.dev.js  webpack.config.js  (+1 more)
src/corner_kick/: .prettierrc  .yarnrc  CMakeLists.txt  CTestTestfile.cmake  README.md  common.d.ts  module.d.ts  package.json  package.xml  tsconfig.json  tslint.json
src/devel/: setup.sh
src/extlibs/: BUILD  LTC4151.BUILD  README.md  aabbcc.BUILD  base64.BUILD  bullet.BUILD  cpp_redis.patch  cppcrc.BUILD  csv.BUILD  fff.BUILD  g3log.BUILD  g3sinks.BUILD  k8_jetson_nano_cross_compile_gcc.BUILD  lapjv_cpp.BUILD  libclang.BUILD  libi2c.BUILD  libusb.BUILD  linux_aarch64_gcc.BUILD  linux_gcc.BUILD  linux_gcc_arm.BUILD  linux_k8_gcc.BUILD  macos_robot_gcc.BUILD  mdv6_firmware.bzl  motor_board_gcc.BUILD  munkres_cpp.BUILD  nanopb.BUILD  nanopb_requirements.in  nanopb_requirements_lock.txt  protobuf.patch  py_cc_toolchain.BUILD  pytorch.BUILD  six.BUILD  tomlplusplus.BUILD  tracy.BUILD  trinamic.BUILD
src/firmware/: BUILD  CMakeLists.txt  HowToBuildAndFlashFirmware.md  build_dongle.sh  cmake.sh  common_defs.h  drive_parameters.h  flash_robot.sh  main.c  main.h  mc_api.c  mc_api.h  mc_app_hooks.c  mc_config.c  mc_config.h  mc_configuration_registers.c  mc_configuration_registers.h  mc_interface.c  mc_interface.h  mc_math.c  mc_math.h  mc_parameters.c  mc_parameters.h  mc_stm_types.h  mc_tasks.c  motorcontrol.h  parameters_conversion_f0xx.h  pwm_curr_fdbk.c  r1_ps_pwm_curr_fdbk.c  r1_ps_pwm_curr_fdbk.h  register_interface.c  register_interface.h  regular_conversion_manager.c  regular_conversion_manager.h  rules.bzl  stm32f0xx_hal_conf.h  stm32f0xx_hal_msp.c  stm32f0xx_it.c  stm32f0xx_mc_it.c  stm32f405.ld
src/firmware_new/: debug_firmware_on_arm_board.sh  nanopb.bzl  rules.bzl
src/matlab_tools/: euclidean_to_wheel.m
src/physics/: euclidean_to_wheel.m
src/proto/: BUILD  ai_config.proto  ball.proto  define_a_proto_to_simulate_standalone_simulator_config  estop_state.proto  game_state.proto  geneva_slot.proto  geometry.options  geometry.proto  import_all_protos.py  ip_notification.proto  manual_gc_command.proto  messages_robocup_ssl_detection.proto  messages_robocup_ssl_geometry.proto  messages_robocup_ssl_wrapper.proto  move_robot_and_ball_messages.proto  nanopb.bzl  parameters.proto  play.proto  play_info_msg.proto  power_frame_msg.proto  primitive.proto  q_learning.proto  replay_bookmark.proto  replay_msg.proto  robot_crash_msg.proto  robot_log_msg.proto  robot_statistic.proto  robot_status_msg.proto  round_trip_time.proto  sensor_msg.proto  serialized_proto.proto  skill.proto  ssl_autoref_ci.proto  ssl_gc_api.proto  ssl_gc_change.proto  ssl_gc_ci.proto  ssl_gc_common.proto  ssl_gc_engine.proto  ssl_gc_engine_config.proto  (+24 more)
src/py_toolchain/: BUILD
src/python_tools/: BUILD  bokeh_server.py  jupyter.py  notebooks_test.py  proto_log.py  requirements.txt  robot_broadcast_receiver.py  robot_broadcast_sender.py  sensor_proto_log.py  test.py  test_hermetic_python_environment.py
src/shared/: 2015_robot_constants.c  2015_robot_constants.cpp  2015_robot_constants.h  2015_wheel_constants.c  2015_wheel_constants.h  2021_robot_constants.c  2021_robot_constants.cpp  2021_robot_constants.h  2022_robot_constants.cpp  2022_robot_constants.h  BUILD  constants.c  constants.h  crc.c  crc.h  jetson_constants.h  pi_constants.h  practice_field_dims.bzl  practice_field_dims.h.tmpl  practice_field_dims.py.tmpl  robot_constants.cpp  robot_constants.h  robot_constants_2021.cpp  robot_constants_2021.h  test.cpp  thunderloop_constants.h  util.c
src/software/: #BUILD#  .#BUILD  BUILD  ai_vs_ai_ci.py  conftest.py  constants.h  constants.py  coroutine_main.cpp  er_force_simulator_main.cpp  full_system_main.cpp  handheld_control_main.cpp  network_log_listener_main.cpp  network_logger_main.cpp  py_constants.cpp  pytest_main.py  python_bindings.cpp  python_constants.cpp  restart_on_crash.sh  robot_diagnostics_main.cpp  run_simulated_ai_vs_ai.sh  standalone_simulator_main.cpp  tracy.sh  unix_full_system_main.cpp
src/starlark/: defs.bzl
src/thunderbots/: .bazelrc  BUILD  CMakeLists.txt  WORKSPACE  g3log.BUILD  simplified_graph.in
src/thunderbots_msgs/: CMakeLists.txt  CTestTestfile.cmake
src/tools/: BUILD
(+7553 files in other folders)
